# markshift

./: README.md  pyproject.toml  run.py  setup.py
.github/workflows/: build.yaml
after/ftplugin/: markshift.vim
autoload/: markshift.vim
ftdetect/: markshift.vim
highlightjs/: highlight.min.js
markshift/: __init__.py  element.py  htmlrenderer.py  parser.py  renderer.py
plugin/: markshift.vim
sample/: input.ms  output.html
sandbox/: fix.py  json_rpc_endpoint.py  markdown_to_markshift.py  test_lark.py
src/markshift/: __init__.py  element.py  exception.py  htmlrenderer.py  htmlrenderer4preview.py  markdownrenderer.py  parser.py  renderer.py  tokenizer.py
src/markshift/cli/: main.py  previewer.py
src/markshift/langserver/: .vscodeignore  README.md  build_exe.sh  package-lock.json  package.json
src/markshift/langserver/client/src/: extension.ts
src/markshift/langserver/server/: __main__.py  entrypoint.py  package-lock.json  package.json  previewer.py  server.py  utils.py  zotero.py
src/markshift/langserver/server/public/: index.html
src/markshift/langserver/server/src/: App.css  App.js
syntax/: markshift.vim
