[project]
name = "markshift"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shohei Fujii", email = "fujii.shohei@gmail.com" }
]
dependencies = [
    "lark[regex]>=1.1.9",
    "click>=8.1.7",
    "pywebview[qt]>=5.1",
    "pygls>=1.3.1",
    "platformdirs>=4.2.2",
    "thefuzz[speedup]>=0.22.1",
    "networkx>=3.3",
    "requests>=2.32.3",
    "lsprotocol>=2023.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
markshift_cli="markshift.cli.main:main"
msls="markshift.langserver.server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pysen>=0.11.0",
    "flake8>=7.1.0",
    "isort>=5.13.2",
    "black>=24.4.2",
    "mypy>=1.10.1",
    "ipython>=8.26.0",
    "pyinstaller>=6.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/markshift"]

